# tv-agent

./: .gitignore  API.md  README.md  pyproject.toml
src/pine/: webhook_alert.pine
src/tv_backtesting/: __main__.py  api.py  config.py
src/tv_backtesting/agent/: run.py  technicals_agent.py  webhook_receiver.py
src/tv_backtesting/auth/: tradingview_auth.py
src/tv_backtesting/backtester/: backtester.py  indicator_backtester.py  optimizer.py  strategy_tester_reader.py
src/tv_backtesting/data/: local_indicators.py  market_data.py
src/tv_backtesting/indicators/: indicator_reader.py  scoring.py
src/tv_backtesting/pine/: templates.py
